# cpp_game

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  main.ilk
assets/: collisionMap.map  map.map  spritesheet.py  transparent.py
inc/: CMakeLists.txt  dataDefinition.hpp
inc/buildings/: CMakeLists.txt  building.hpp  smallHouse.hpp
inc/characters/: npc.hpp  villager.hpp
inc/game/: CMakeLists.txt  Components.hpp  ECS.hpp  GameObject.hpp  Map.hpp  Vector2D.hpp  game.hpp  textureManager.hpp
inc/game/ECS/: Animation.hpp  ArtificialMovementComponent.hpp  ColliderComponent.hpp  Collision.hpp  Components.hpp  ECS.hpp  KeyboardController.h  KeyboardController.hpp  PositionComponent.hpp  SpriteComponent.hpp  TileComponent.hpp
src/buildings/: building.cpp  smallHouse.cpp
src/characters/: CMakeLists.txt  npc.cpp  villager.cpp
src/game/: Collision.cpp  ECS.cpp  GameObject.cpp  Map.cpp  Vector2D.cpp  game.cpp  textureManager.cpp
